# KidsAI

./: .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
.storybook/: main.ts  preview.ts
docs/: seed-user-guide.md
kidsai-server/: .env.example  .gitignore  README.md  pyproject.toml
kidsai-server/deploy/: .env.production.example  RUNBOOK.md  deploy_assets.sh  install.sh  kidsai-admin.py  kidsai-server.service  nginx-api.kids.ibi.ren.conf  nginx-assets.kids.ibi.ren.conf  nginx-kids.ibi.ren.conf
kidsai-server/kidsai_server/: __init__.py  auth.py  config.py  db.py  dependencies.py  keypool.py  main.py  models.py  secrets_publisher.py  skills_publisher.py  wallet.py
kidsai-server/kidsai_server/routes/: __init__.py  activate.py  admin.py  asset.py  me.py  secrets.py  skills.py  telemetry.py
kidsai-server/tests/: conftest.py  test_activate.py  test_admin.py  test_asset_manifest.py  test_balance.py  test_healthz.py  test_idempotency.py  test_keypool.py  test_record_spend.py  test_secrets_publisher.py  test_secrets_routes.py  test_skills.py  test_skills_publisher.py  test_spend_summary.py  test_telemetry.py  test_wallet_new_kinds.py
kidsai-server/tools/: asset_manifest_spec.yaml  generate_assets.py  generate_promo_video.py
prompts/adult/: director_pro.yaml  safety_minimal.yaml
prompts/child/: director.yaml  safety_blacklist.yaml
scripts/: phase1-rename.pl  phase1-rename.sh  phase1.sed
shared/types/: index.ts  level.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: dev_signing_pubkey.pem
src-tauri/capabilities/: default.json
src-tauri/seed_skills/video-director/: manifest.json
src-tauri/seed_skills/video-director/lesson-templates/: l1-l7.json
src-tauri/seed_skills/video-director/prompts/: camera.yaml  spine.yaml  stage-confirm.yaml  system-director.yaml
src-tauri/src/: agent.rs  anti_tamper.rs  assets_local.rs  character.rs  content.rs  crashlog.rs  creations.rs  db.rs  image_adapter.rs  key_pool.rs  levels.rs  lib.rs  license_client.rs  license_signer.rs  license_store.rs  main.rs  marketplace_client.rs  model.rs  model_factory.rs  model_mock.rs  model_openai.rs  music_adapter.rs  parent_pin.rs  projects.rs  prompt_builder.rs  safety.rs  secrets.rs  secrets_ipc.rs  secrets_loader.rs  secrets_runtime.rs  secrets_store.rs  skills_runtime.rs  style.rs  telemetry.rs  test_helpers.rs  tools.rs  trusted_storage.rs  types.rs  user_mode.rs  video_adapter.rs  (+1 more)
src-tauri/src/kernel/: event_bus.rs  identity.rs  ipc.rs  lesson_templates.rs  memory_bus.rs  memory_store.rs  mod.rs  pet_engine.rs  seed_skills.rs  skill_loader.rs  state.rs  tool_bus.rs
src-tauri/src/skills/: mod.rs  store.rs  verifier.rs
src-tauri/tests/: agent_smoke.rs  agent_stream.rs  assets_local.rs  db_smoke.rs  ipc_compat.rs  key_failover.rs  mode_switch.rs  openai_parse.rs  persona_e2e.rs  projects.rs  real_hailuo_via_license.rs  real_image_gen.rs  real_llm.rs  real_music_gen.rs  real_seedance_via_license.rs  real_voice_clone.rs  secrets_rotation.rs  skills_install.rs  storyboard_prompt.rs  studio_pipeline.rs
src/api/: tauri.test.ts  tauri.ts
(+95 files in other folders)
