[project]
name = "kidsai-server"
version = "0.1.0"
description = "KidsAI Studio 控制平面后端 — License + Quota 记账, 不代理 LLM/Seedance 流量"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kidsai_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"