[package]
name = "kidsai-studio"
version = "0.1.0"
description = "KidsAI Studio - 让 8-16 岁孩子用 AI 创作出真实作品"
authors = ["KidsAI Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kidsai_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
dotenvy = "0.15"
async-trait = "0.1"
futures-util = "0.3"

[dev-dependencies]
mockito = "1.7"
tempfile = "3.13"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
