[package]
name = "kidsai-studio"
version = "0.1.0"
description = "KidsAI Studio - 让 8-16 岁孩子用 AI 创作出真实作品"
authors = ["KidsAI Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kidsai_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util"] }
dotenvy = "0.15"
async-trait = "0.1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

# W10 + W11 共享底座: skills + secrets + adult-mode 用的 crypto/storage
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2", "pem"] }
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
argon2 = "0.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2"
thiserror = "1"

[dev-dependencies]
mockito = "1.7"
tempfile = "3.13"
hound = "3.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
